--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,7 @@ jobs:
   test:
     strategy:
       matrix:
-        # TODO: JRuby is disabled because of https://github.com/jruby/jruby/issues/6606
-        ruby: ['2.4', '2.5', '2.6', '2.7', '3.0']
+        ruby: ['jruby-9.2', '2.4', '2.5', '2.6', '2.7', '3.0']
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
