--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
   test:
     strategy:
       matrix:
-        ruby: ['jruby-9.2', '2.4', '2.5', '2.6', '2.7', '3.0']
+        ruby: ['jruby-9.2', 'jruby-9.3', '2.4', '2.5', '2.6', '2.7', '3.0', '3.1']
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
